search-engine-manager: get_address() must return NULL

The search-engine-dialog relies on get_address() returning NULL to
detect new search engines. It doesn't function properly otherwise. All
code using this function just needs to be prepared to handle a NULL
address.

In contrast, get_address_for_default_engine() really does need to always
return a result. At least, it's more convenient this way, so that
calling code doesn't have to handle that manually. Rename the function
to make this more clear and reduce confusion, as it would be odd to have
two parallel functions function differently in this respect.

https://bugzilla.gnome.org/show_bug.cgi?id=787458