lib/ephy-search-engine-manager.h
@@ -39,7 +39,7 @@ G_DECLARE_FINAL_TYPE (EphySearchEngineManager, ephy_search_engine_manager, EPHY,
 EphySearchEngineManager     *ephy_search_engine_manager_new                      (void);
 const char                  *ephy_search_engine_manager_get_address              (EphySearchEngineManager *manager,
                                                                                   const char              *name);
-const char                  *ephy_search_engine_manager_get_address_for_default_engine
+const char                  *ephy_search_engine_manager_get_default_search_address
                                                                                  (EphySearchEngineManager *manager);
 const char                  *ephy_search_engine_manager_get_bang                 (EphySearchEngineManager *manager,
                                                                                   const char              *name);
